Remove .env and __pycache__ from repository

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
 
         <form id="chatForm" class="chat-form">
-            <input id="userInput" type="text" placeholder="Type your message..." />
+            <input id="userInput" type="text" placeholder="Type your message..." required />
             <button type="submit">Send</button>
         </form>
     </div>
