--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,12 @@
 
         <div id="chat" class="chat-box"></div>
 
-
         <form id="chatForm" class="chat-form">
             <input id="userInput" type="text" placeholder="Type your message..." required />
             <button type="submit">Send</button>
         </form>
+
+        <button id="clearChat" class="clear-btn">🗑️ New Chat</button>
     </div>
 
     <script src="/static/script.js"></script>
