--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <button id="clearChat" class="clear-btn">🗑️ New Chat</button>
     </div>
 
-    <script src="/static/script.js"></script>
+    <script src="../static/script.js"></script>
 </body>
 
 </html>
